// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /flight-log Get flight log with Id should return a single row when data is present for the given Id 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2LastName": "Nieminen",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`GET /flight-log should allow query parameters to be optional 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should only return data for the logged in user when not admin 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return 200 for Start Date with time offset 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return 200 with valid query params 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "blockTime": "02:15",
  "crew2LastName": "Nieminen",
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "instrumentFlyingMins": 45,
  "isBillableFlight": true,
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "status": "NEW",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
}
`;

exports[`GET /flight-log should return all data for ac when user is admin 1`] = `
[
  {
    "acTotalFlightTime": "4780:05",
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 1,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFTU",
    "billableMemberId": "Sanna1",
    "blockTime": "02:05",
    "crew2LastName": "Seppälä",
    "departureAirport": "EFHK",
    "flightId": "eject",
    "flightTime": "01:45",
    "flightType": "MAT",
    "fuelRemainingLitres": 60,
    "fuelUpliftLitres": 45,
    "instrumentFlyingMins": 60,
    "isBillableFlight": true,
    "landingTimeUtc": "2024-03-12T01:00:00.000Z",
    "nightFlyingMins": 115,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2024-03-11T23:05:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeUtc": "2024-03-12T01:10:00.000Z",
    "personsOnBoard": 2,
    "picLastName": "Koskinen",
    "status": "NEW",
    "takeoffTimeUtc": "2024-03-11T23:15:00.000Z",
    "totalTimeInService": 1.92,
  },
  {
    "acTotalFlightTime": "4781:50",
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 2,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockTime": "02:15",
    "crew2LastName": "Nieminen",
    "departureAirport": "EFHK",
    "flightId": "mikify",
    "flightTime": "01:45",
    "flightType": "KOU",
    "fuelRemainingLitres": 20,
    "fuelUpliftLitres": 50,
    "instrumentFlyingMins": 45,
    "isBillableFlight": true,
    "landingTimeUtc": "2025-03-01T10:00:00.000Z",
    "nightFlyingMins": 30,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
    "oilUpliftLitres": 1.5,
    "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
    "personsOnBoard": 4,
    "picLastName": "Korhonen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
    "totalTimeInService": 2,
  },
  {
    "acTotalFlightTime": "4783:20",
    "aircraftRegistration": "OH-STL",
    "ajlbBlankRowsBefore": 0,
    "ajlbRowNo": 3,
    "ajlbSeqNo": 2,
    "arrivalAirport": "EFHK",
    "billableMemberId": "Matti1",
    "blockTime": "02:12",
    "crew2LastName": "Heikkinen",
    "departureAirport": "EFHK",
    "flightId": "bLwnAstr0",
    "flightTime": "01:30",
    "flightType": "TAR",
    "fuelRemainingLitres": 10,
    "fuelUpliftLitres": 40,
    "instrumentFlyingMins": 30,
    "isBillableFlight": false,
    "landingTimeUtc": "2025-03-03T12:00:00.000Z",
    "nightFlyingMins": 20,
    "numberOfLandings": 1,
    "numberOfNightLandings": 0,
    "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
    "oilUpliftLitres": 1,
    "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
    "personsOnBoard": 3,
    "picLastName": "Hämäläinen",
    "status": "NEW",
    "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
    "totalTimeInService": 1.5,
  },
]
`;

exports[`GET /flight-log/flightid should return flight for admin with sudo rights 1`] = `
{
  "acTotalFlightTime": "6118:40",
  "aircraftRegistration": "OH-IHQ",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 81,
  "ajlbRowNo": 1,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFTP",
  "billableMemberId": "Jukka1",
  "billingRemarks": "N/A",
  "blockMins": 150,
  "blockTime": "02:30",
  "createdAt": Any<String>,
  "createdBy": "Jukka1",
  "crew2LastName": "Hämäläinen",
  "crew2MemberId": "Pekka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "efnu4evr",
  "flightMins": 120,
  "flightTime": "02:00",
  "flightType": "MAT",
  "fuelRemainingLitres": 60,
  "fuelUpliftLitres": 60,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 60,
  "invoiceNumber": "INV002",
  "isBillableFlight": true,
  "isBilled": true,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1740914400",
  "landingTimeUtc": "2025-03-02T11:20:00.000Z",
  "nightFlyingMins": 45,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 2,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740906000",
  "offBlockTimeUtc": "2025-03-02T09:00:00.000Z",
  "oilUpliftLitres": 2,
  "onBlockTimeEpoch": "1740915000",
  "onBlockTimeUtc": "2025-03-02T11:30:00.000Z",
  "personalRemarks": "Training flight",
  "personsOnBoard": 2,
  "picLastName": "Nieminen",
  "picMemberId": "Jukka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "INVOICED",
  "takeoffTimeEpoch": "1740907200",
  "takeoffTimeUtc": "2025-03-02T09:20:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /flight-log/flightid should return flights for the logged in user when not admin 1`] = `
{
  "acTotalFlightTime": "4781:50",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 2,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 135,
  "blockTime": "02:15",
  "createdAt": Any<String>,
  "createdBy": "Matti1",
  "crew2LastName": "Nieminen",
  "crew2MemberId": "Jukka1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "mikify",
  "flightMins": 105,
  "flightTime": "01:45",
  "flightType": "KOU",
  "fuelRemainingLitres": 20,
  "fuelUpliftLitres": 50,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 45,
  "invoiceNumber": null,
  "isBillableFlight": true,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1740823200",
  "landingTimeUtc": "2025-03-01T10:00:00.000Z",
  "nightFlyingMins": 30,
  "nonBillingApprovedByMemberId": null,
  "nonBillingReason": null,
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740816000",
  "offBlockTimeUtc": "2025-03-01T08:00:00.000Z",
  "oilUpliftLitres": 1.5,
  "onBlockTimeEpoch": "1740824100",
  "onBlockTimeUtc": "2025-03-01T10:15:00.000Z",
  "personalRemarks": "Smooth flight",
  "personsOnBoard": 4,
  "picLastName": "Korhonen",
  "picMemberId": "Liisa1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740816900",
  "takeoffTimeUtc": "2025-03-01T08:15:00.000Z",
  "totalTimeInService": 2,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`GET /flight-log/totals should return 200 with all ac totals 1`] = `
{
  "acTotalFlightHours": 5230.166666666667,
  "acTotalFlightTime": "5230:10",
  "aircraftRegistration": "OH-P28",
  "ajlbSeqNo": 4,
}
`;

exports[`GET /flight-log/totals should return 200 with valid registration 1`] = `
{
  "acTotalFlightHours": 4783.333333333333,
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbSeqNo": 2,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 1`] = `
{
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 2`] = `
{
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 3`] = `
{
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Antti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": false,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role 4`] = `
{
  "acTotalFlightTime": "4783:20",
  "aircraftRegistration": "OH-STL",
  "ajlbBlankRowsBefore": 0,
  "ajlbPageNo": 10,
  "ajlbRowNo": 3,
  "ajlbSeqNo": 2,
  "arrivalAirport": "EFHK",
  "billableMemberId": "Matti1",
  "billingRemarks": "N/A",
  "blockMins": 132,
  "blockTime": "02:12",
  "createdAt": Any<String>,
  "createdBy": "Antti1",
  "crew2LastName": "Heikkinen",
  "crew2MemberId": "Antti1",
  "crew2Role": "FI",
  "crew3LastName": null,
  "crew3MemberId": null,
  "crew3Role": null,
  "crew4LastName": null,
  "crew4MemberId": null,
  "crew4Role": null,
  "departureAirport": "EFHK",
  "flightId": "bLwnAstr0",
  "flightMins": 90,
  "flightTime": "01:30",
  "flightType": "TAR",
  "fuelRemainingLitres": 10,
  "fuelUpliftLitres": 40,
  "incidentOrObservations": null,
  "instrumentFlyingMins": 30,
  "invoiceNumber": null,
  "isBillableFlight": false,
  "isBilled": false,
  "isDtoTrainingFlight": true,
  "landingTimeEpoch": "1741003200",
  "landingTimeUtc": "2025-03-03T12:00:00.000Z",
  "nightFlyingMins": 20,
  "nonBillingApprovedByMemberId": "Juha1",
  "nonBillingReason": "Club activity",
  "numberOfLandings": 1,
  "numberOfNightLandings": 0,
  "offBlockTimeEpoch": "1740996000",
  "offBlockTimeUtc": "2025-03-03T10:00:00.000Z",
  "oilUpliftLitres": 1,
  "onBlockTimeEpoch": "1741003920",
  "onBlockTimeUtc": "2025-03-03T12:12:00.000Z",
  "personalRemarks": "Routine check",
  "personsOnBoard": 3,
  "picLastName": "Hämäläinen",
  "picMemberId": "Pekka1",
  "picRole": "STU",
  "privOrComFlight": "C",
  "status": "NEW",
  "takeoffTimeEpoch": "1740997800",
  "takeoffTimeUtc": "2025-03-03T10:30:00.000Z",
  "totalTimeInService": 1.5,
  "updatedAt": Any<String>,
  "updatedBy": "Matti1",
}
`;
